iptables-rules
# iptables rules file.

# --------------------------------------------------#

*filter

# Create a new chain called MYSQL.
-N MYSQL

# Allow traffic from this local machine.
-A MYSQL -s 127.0.0.1 -j ACCEPT

# Drop all other packets.
-A MYSQL -j DROP

# Forward all inbound traffic on port 3306 to the MYSQL chain.
-A INPUT -p tcp --dport 3306 -j MYSQL

# Allow all loopback (lo0) traffic and drop all traffic to 127/8 that doesn't use lo0.
-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.0/8 -j REJECT

# Accept all established inbound connections.
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

#  Allow all outbound traffic - you can modify this to only allow certain traffic.
-A OUTPUT -j ACCEPT

# Allow HTTP and HTTPS connections from anywhere (the normal ports for websites and SSL).
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT

# Allow SSH connections.
# The -dport number should be the same port number set in sshd_config.
-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT

# Allow ping.
-A INPUT -p icmp -j ACCEPT

# Log iptables denied calls.
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7

# Drop all other inbound; default deny unless explicitly allowed policy.
-A INPUT -j DROP
-A FORWARD -j DROP

COMMIT
